added flexIt class

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                         <div class="center">
                             <figure>
                                 <!--50 x 49-->
-                                <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="80" height="78.4">
+                                <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="80" height="78.4" class="spaceBetweenItems">
                                 <!-- 50 x 42.3-->
-                                <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="80" height="68">
+                                <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="80" height="68" class="spaceBetweenItems">
                                 <!-- 57.1 x 41.5-->
-                                <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="87" height="61">
+                                <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="87" height="61" class="spaceBetweenItems">
                             </figure>
                         <p>Get personalized and tailored services based on your needs</p>
                         </div>
@@ -63,13 +63,14 @@
                 <h2>Services</h2>
                     <p>Our services include:</p>
             </div>
-            <div class="center">
+            <div class="center" class="flexIt">
+                    <p>Keeping your landscape clean and maintained, whether commercial or residential</p>
                     <div class="imageRight">
                         <figure>
                             <img src="Images/rakingLeavesOrange.png" width="90" height="107">
                         </figure>
                     </div>
-                    <p>Keeping your landscape clean and maintained, whether commercial or residential</p>
+                    <!-- <p>Keeping your landscape clean and maintained, whether commercial or residential</p> -->
             </div>
             <div class="center">
                 <div class="imageLeft">
