ready to start working on bigger screens

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
                     <p>Our services include:</p>
             </div>
             <div class="center" class="flexIt">
+                <div>
+                    <figure>
+                        <img src="Images/rakingLeavesOrange.png" width="90" height="107">
+                    </figure>
+                </div>
                     <p>Keeping your landscape clean and maintained, whether commercial or residential</p>
-                    <div class="imageRight">
-                        <figure>
-                            <img src="Images/rakingLeavesOrange.png" width="90" height="107">
-                        </figure>
-                    </div>
                     <!-- <p>Keeping your landscape clean and maintained, whether commercial or residential</p> -->
             </div>
             <div class="center">
-                <div class="imageLeft">
+                <div>
                     <figure>
                         <img src="Images/layingSodOrange.png" width="126" height="82">
                     </figure>
@@ -113,8 +113,8 @@
         </section>
     </main>
     <footer>
-        <p class="center">Website by Darius Williams</p>
-        <p class="center">www.linkedin.com/in/dariuswilliamsdev</p>
+        <p class="center">COPYRIGHT &#169;</p>
+        <p class="center"><a href="https://www.linkedin.com/in/dariuswilliamsdev" target="_blank">Website by Darius Williams</a></p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
