mediaQs up to 600px

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2 class="center">Why Choose Us</h2>
                     <div class="center">
                         <figure>
-                            <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119">
+                            <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119" class="imageBigger">
                         </figure>
                         <p>As a small local business, you can be sure you will get the attention you deserve</p>
                     </div>
@@ -52,7 +52,7 @@
                         </div>
                     <div class="center">
                         <figure>
-                            <img src="Images/talkingPhoneOrange.png" width="137.3" height="118">
+                            <img src="Images/talkingPhoneOrange.png" width="137.3" height="118" class="imageBigger">
                         </figure>
                         <p>As the owner, I am only a phone call away</p>
                     </div>
@@ -60,13 +60,13 @@
         <hr>
         <section id="section3">
             <div class="center">
-                <h2>Services</h2>
-                    <p>Our services include:</p>
+                <h2 class="lessMarginBottom">Services</h2>
+                    <p class="secDescription">Our services include:</p>
             </div>
             <div class="center" class="flexIt">
                 <div>
                     <figure>
-                        <img src="Images/rakingLeavesOrange.png" width="90" height="107">
+                        <img src="Images/rakingLeavesOrange.png" width="90" height="107" class="imageBigger">
                     </figure>
                 </div>
                     <p>Keeping your landscape clean and maintained, whether commercial or residential</p>
@@ -75,14 +75,14 @@
             <div class="center">
                 <div>
                     <figure>
-                        <img src="Images/layingSodOrange.png" width="126" height="82">
+                        <img src="Images/layingSodOrange.png" width="126" height="82" class="imageBigger">
                     </figure>
                 </div>
                 <p>Laying sod, mowing, and lawn maintenance</p>
             </div>
             <div class="center">
             <figure>
-                <img src="Images/hardscapingOrange.png" width="136" height="85">
+                <img src="Images/hardscapingOrange.png" width="136" height="85" class="imageBigger">
             </figure>
             <p>Roof and gutter cleaning, hardscaping, and more!</p>
             </div>
@@ -90,8 +90,8 @@
         <hr>
         <section id="section4">
             <div class="center">
-                <h2>Portfolio</h2>
-                    <p>Sample of my work:</p>
+                <h2 class="lessMarginBottom">Portfolio</h2>
+                    <p class="secDescription">Sample of my work:</p>
             </div>
                 <div>
                     <div class="center buttonMargin">
