--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
                         <div class="center">
                             <figure>
                                 <!--50 x 49-->
-                                <img src="Images/wheelBarroworange.png" alt="emptying a wheelbarrow" width="80" height="78.4" class="spaceBetweenItems">
+                                <img src="Images/wheelBarroworange.png" alt="stickman emptying a wheelbarrow" width="80" height="78.4" class="spaceBetweenItems">
                                 <!-- 50 x 42.3-->
-                                <img src="Images/hedgeTrimmer.png" alt="man using a hedgetrimmer" width="80" height="68" class="spaceBetweenItems">
+                                <img src="Images/hedgeTrimmer.png" alt="stickman using a hedgetrimmer" width="80" height="68" class="spaceBetweenItems">
                                 <!-- 57.1 x 41.5-->
-                                <img src="Images/plantingTreeorange.png" alt="man planting a tree" width="87" height="61" class="spaceBetweenItems">
+                                <img src="Images/plantingTreeorange.png" alt="stickman planting a tree" width="87" height="61" class="spaceBetweenItems">
                             </figure>
                         <p>Get personalized and tailored services based on your needs</p>
                         </div>
                     <div class="center">
                         <figure>
-                            <img src="Images/talkingPhoneOrange.png" width="137.3" height="118" class="imageBigger">
+                            <img src="Images/talkingPhoneOrange.png" width="137.3" height="118" class="imageBigger" alt="two stickmen talking on the phone to each other">
                         </figure>
                         <p>As the owner, I am only a phone call away</p>
                     </div>
@@ -66,7 +66,7 @@
             <div class="center" class="flexIt">
                 <div>
                     <figure>
-                        <img src="Images/rakingLeavesOrange.png" width="90" height="107" class="imageBigger">
+                        <img src="Images/rakingLeavesOrange.png" width="90" height="107" class="imageBigger" alt="stickman raking leaves">
                     </figure>
                 </div>
                     <p>Keeping your landscape clean and maintained, whether commercial or residential</p>
@@ -75,14 +75,14 @@
             <div class="center">
                 <div>
                     <figure>
-                        <img src="Images/layingSodOrange.png" width="126" height="82" class="imageBigger">
+                        <img src="Images/layingSodOrange.png" width="126" height="82" class="imageBigger" alt="stickman laying sod">
                     </figure>
                 </div>
                 <p>Laying sod, mowing, and lawn maintenance</p>
             </div>
             <div class="center">
             <figure>
-                <img src="Images/hardscapingOrange.png" width="136" height="85" class="imageBigger">
+                <img src="Images/hardscapingOrange.png" width="136" height="85" class="imageBigger" alt="stickman laying bricks">
             </figure>
             <p>Roof and gutter cleaning, hardscaping, and more!</p>
             </div>
