--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>Transforming Your Outdoor Space with Expertise and Experience</p>
                 <button class="btn-qt">Call for a Quote</button>
             </div>
-            <figure><img src="Images/afterGarden.png" alt="garden with mulch" width="254" height="338" class="imgWide"></figure>
+            <figure class="center"><img src="Images/afterGarden.png" alt="garden with mulch" width="254" height="338" class="imgWide"></figure>
         </section>
         <hr>
         <section id="section2">
@@ -42,11 +42,11 @@
                         <div class="center">
                             <figure>
                                 <!--50 x 49-->
-                                <img src="Images/wheelBarroworange.png" alt="stickman emptying a wheelbarrow" width="80" height="78.4" class="spaceBetweenItems">
+                                <img src="Images/wheelBarroworange.png" alt="stickman emptying a wheelbarrow" width="80" height="78.4" class="spaceBetweenItems arBigger">
                                 <!-- 50 x 42.3-->
-                                <img src="Images/hedgeTrimmer.png" alt="stickman using a hedgetrimmer" width="80" height="68" class="spaceBetweenItems">
+                                <img src="Images/hedgeTrimmer.png" alt="stickman using a hedgetrimmer" width="80" height="68" class="spaceBetweenItems arBigger">
                                 <!-- 57.1 x 41.5-->
-                                <img src="Images/plantingTreeorange.png" alt="stickman planting a tree" width="87" height="61" class="spaceBetweenItems">
+                                <img src="Images/plantingTreeorange.png" alt="stickman planting a tree" width="87" height="61" class="spaceBetweenItems arBigger">
                             </figure>
                         <p>Get personalized and tailored services based on your needs</p>
                         </div>
