ready for section2 flex

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         <hr>
         <section id="section2">
                 <h2 class="center">Why Choose Us</h2>
-                    <div class="center">
-                        <figure>
-                            <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119" class="imageBigger">
-                        </figure>
-                        <p>As a small local business, you can be sure you will get the attention you deserve</p>
-                    </div>
+                    <div id="section2Div">
+                        <div class="center">
+                            <figure>
+                                <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119" class="imageBigger">
+                            </figure>
+                            <p>As a small local business, you can be sure you will get the attention you deserve</p>
+                        </div>
                         <div class="center">
                             <figure>
                                 <!--50 x 49-->
@@ -48,13 +49,14 @@
                                 <!-- 57.1 x 41.5-->
                                 <img src="Images/plantingTreeorange.png" alt="stickman planting a tree" width="87" height="61" class="spaceBetweenItems arBigger">
                             </figure>
-                        <p>Get personalized and tailored services based on your needs</p>
+                            <p>Get personalized and tailored services based on your needs</p>
                         </div>
-                    <div class="center">
-                        <figure>
-                            <img src="Images/talkingPhoneOrange.png" width="137.3" height="118" class="imageBigger" alt="two stickmen talking on the phone to each other">
-                        </figure>
-                        <p>As the owner, I am only a phone call away</p>
+                        <div class="center">
+                            <figure>
+                                <img src="Images/talkingPhoneOrange.png" width="137.3" height="118" class="imageBigger" alt="two stickmen talking on the phone to each other">
+                            </figure>
+                            <p>As the owner, I am only a phone call away</p>
+                        </div>
                     </div>
         </section>
         <hr>
