Why choose use margin and flex

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                         <div class="center">
                             <figure>
                                 <!--50 x 49-->
-                                <img src="Images/wheelBarroworange.png" alt="stickman emptying a wheelbarrow" width="80" height="78.4" class="spaceBetweenItems arBigger">
+                                <img src="Images/wheelBarroworange.png" alt="stickman emptying a wheelbarrow" width="80" height="78.4" class="spaceBetweenItems flexNone arBigger">
                                 <!-- 50 x 42.3-->
-                                <img src="Images/hedgeTrimmer.png" alt="stickman using a hedgetrimmer" width="80" height="68" class="spaceBetweenItems arBigger">
+                                <img src="Images/hedgeTrimmer.png" alt="stickman using a hedgetrimmer" width="80" height="68" class="spaceBetweenItems flexNone arBigger">
                                 <!-- 57.1 x 41.5-->
                                 <img src="Images/plantingTreeorange.png" alt="stickman planting a tree" width="87" height="61" class="spaceBetweenItems arBigger">
                             </figure>
