--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                             <figure>
                                 <img src="Images/twoTalkingOrange.png" alt="two people talking while sitting on chairs" width="170.4" height="119" class="imageBigger">
                             </figure>
-                            <p>As a small local business, you can be sure you will get the attention you deserve</p>
+                            <p class="leftMarg">As a small local business, you can be sure you will get the attention you deserve</p>
                         </div>
-                        <div class="center">
+                        <div class="center" id="width33">
                             <figure>
                                 <!--50 x 49-->
                                 <img src="Images/wheelBarroworange.png" alt="stickman emptying a wheelbarrow" width="80" height="78.4" class="spaceBetweenItems flexNone arBigger">
@@ -55,7 +55,7 @@
                             <figure>
                                 <img src="Images/talkingPhoneOrange.png" width="137.3" height="118" class="imageBigger" alt="two stickmen talking on the phone to each other">
                             </figure>
-                            <p>As the owner, I am only a phone call away</p>
+                            <p class="leftMarg">As the owner, I am only a phone call away</p>
                         </div>
                     </div>
         </section>
