--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <link href="CSS/style3.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="#">
         <nav>
-            <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg">
+            <a href="#" id="logoLink"><img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg"></a>
             <ul>
                 <li><a href="tel:" target="_blank"><button id="firstCallButton" class="btn-qt qt1">Call for a Quote</button></a></li>
                 <li><p id="secondCallButton">Call 555-555-5555 for a Quote</p></li>
