--- a/spanish.html
+++ b/spanish.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg">
+            <a href="index.html" id="logoLink"><img src="Images/TypeLogoShadow.png" alt="Ramirez Landscaping logo" width="205" height="34" class="logoImg"></a>
             <ul>
                 <li><a href="tel:" target="_blank"><button id="firstCallButton" class="btn-qt qt1">Cotización Gratis</button></a></li>
                 <li><p id="secondCallButton">Llame al 555-555-5555 para una cotización</p></li>
