--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         </section>
     </main>
     <footer>
-        <p class="center">COPYRIGHT &#169;</p>
-        <p class="center"><a href="https://www.linkedin.com/in/dariuswilliamsdev" target="_blank">Website by Darius Williams</a></p>
+        <p class="center"><small>COPYRIGHT &#169; 2023, Darius Williams</small></p>
+        <p class="center"><a href="https://www.linkedin.com/in/dariuswilliamsdev" target="_blank"><small>Website by Darius Williams</small></a></p>
         <p class="center"><a href="https://www.linkedin.com/in/dariuswilliamsdev" target="_blank">Please click here to send me a message on LinkedIn for accessibility issues.</a></p>
     </footer>
     <script src="JS/script.js"></script>
